--- a/0.3/time/sequence.html
+++ b/0.3/time/sequence.html
@@ -19,6 +19,20 @@
 					<a href="/minno-time/0.3/time/overview.html">miTime</a>
 				</nav>
 				<nav>
+                    <div id="search-box">
+                        <script>
+                            (function() {
+                                var cx = '002953266509769041597:smg5beek-iu';
+                                var gcse = document.createElement('script');
+                                gcse.type = 'text/javascript';
+                                gcse.async = true;
+                                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                                var s = document.getElementsByTagName('script')[0];
+                                s.parentNode.insertBefore(gcse, s);
+                            })();
+                        </script>
+                        <gcse:searchbox-only></gcse:searchbox-only>
+                    </div>
                     <select id="version-select"><option value="0.3" selected>v0.3</option></select>
 					<a href="https://github.com/minnojs">Github</a>
 				</nav>
@@ -90,7 +104,7 @@
 
 
 	// ### The trial sequence
-	// The heart of any PIP script is the sequence.
+	// The heart of any miTime script is the sequence.
 	// In this part of the tutorial we will see some advanced uses of the sequencer. &lt;/br&gt;
 
 	API.addSequence([
@@ -283,7 +297,7 @@
 	/* this is where we close the sequence */
 
 	// ### Pro tip
-	// *This section goes beyond the normal scope of the PIP, and is intended for use by advanced users only.* &lt;/br&gt;
+	// *This section goes beyond the normal scope of the miTime, and is intended for use by advanced users only.* &lt;/br&gt;
 	// The sequencer allows for many complex configurations. There are times that you want a quick easy way to test that the sequence you created really does what it is supposed to.
 	// The proper way to do that is to create a mock sequence and check that it is mixed correctly. &lt;/br&gt;
 	// Following is such an example. &lt;/br&gt;
